# gecko_sdk

./: CMakeLists.txt
hardware/: CMakeLists.txt
hardware/kit/: CMakeLists.txt
hardware/kit/common/drivers/: CMakeLists.txt  retargetio.c
platform/: CMakeLists.txt
platform/CMSIS/: CMakeLists.txt
platform/Device/: CMakeLists.txt
platform/Device/SiliconLabs/: CMakeLists.txt
platform/Device/SiliconLabs/EFM32PG23/: CMakeLists.txt
platform/common/: CMakeLists.txt
platform/driver/: CMakeLists.txt
platform/emdrv/: CMakeLists.txt
platform/emlib/: CMakeLists.txt
platform/service/: CMakeLists.txt
util/: CMakeLists.txt
